update gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,7 @@ config.js
 # links
 notes.txt
 
-boilerplate/node_modules
-boilerplate/build
+boilerplate/node_modules/
+boilerplate/build/
+boilerplate/package-lock.json
+boilerplate/yarn.lock
