--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -13,12 +13,16 @@
   "dependencies": {
     "autoprefixer": "^8.2.0",
     "connect-livereload": "^0.6.0",
+    "csswring": "^6.0.3",
     "express": "<4.0.0",
     "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-uglify": "^3.3.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-ejs-render": "^0.2.7",
     "grunt-express-server": "^0.5.4",
+    "grunt-postcss": "^0.9.0",
     "grunt-sass": "^2.1.0",
     "open": "^0.0.5",
     "postcss": "^6.0.21"
