--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -16,6 +16,7 @@
     "csswring": "^6.0.3",
     "express": "<4.0.0",
     "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-uglify": "^3.3.0",
