--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -15,10 +15,9 @@
     "express": "<4.0.0",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^1.1.0",
-    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-uglify": "^3.3.0",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-contrib-requirejs": "^1.0.0",
     "grunt-ejs-render": "^0.2.7",
     "grunt-express-server": "^0.5.4",
     "grunt-postcss": "^0.9.0",
